<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">GridimageSearch</string>
    <string name="hint_query">Enter search word</string>
    <string name="action_settings">Settings</string>
    <string name="btnText">Search</string>
    <string name="app_label">Grid Image Search</string>
    <string name="title_activity_image_display">Display Image</string>
    <string name="title_activity_menu">Main Menu</string>
    <string name="title_filter_menu">Filter Menu</string>
    <string name="settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="title_activity_filter_display">Filter Images</string>
    <string name="tvFilters">Advanced Filters</string>
    <string name="SelectImageType">Select Image Type</string>
    <string name="SelectColor">Select Color</string>
    <string name="tvColorSpinner">Color</string>
    <string name="btnSave">Save</string>
    <string name="filters">Filters</string>
    <string name="tvSafetySpinner">Safety Level</string>
    <string name="tvTypeSpinner">Type</string>
    <string name="promptSafetyLevel">Select search safety level</string>
</resources>
