<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/tvFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tvFilters" />

    <TextView
        android:id="@+id/tvColorSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFilters"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:text="@string/tvColorSpinner" >
    </TextView>
    
    <Spinner
        android:id="@+id/spColorFilter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvColorSpinner"
        android:layout_alignBottom="@+id/tvColorSpinner" 
        android:prompt="@string/SelectColor"
        android:entries="@array/color_array"
        android:spinnerMode="dialog"	>
    </Spinner>

   <TextView
        android:id="@+id/tvTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spColorFilter"
        android:layout_marginTop="30dp"
        android:text="@string/tvTypeSpinner" >   
   </TextView>
   
    <Spinner
        android:id="@+id/spTypeFilter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvTypeSpinner"        
        android:layout_below="@+id/spColorFilter"
        android:layout_alignBottom="@+id/tvTypeSpinner" 
        android:prompt="@string/SelectImageType" 
        android:spinnerMode="dialog">
   </Spinner>

     <TextView
        android:id="@+id/tvSafetySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvTypeSpinner"
        android:layout_marginTop="30dp"
        android:text="@string/tvSafetySpinner" >   
   </TextView>
   
    <Spinner
        android:id="@+id/spSafetyFilter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvSafetySpinner"        
        android:layout_below="@+id/spTypeFilter"
        android:layout_alignBottom="@+id/tvSafetySpinner" 
        android:prompt="@string/promptSafetyLevel" 
        android:spinnerMode="dialog">
   </Spinner>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spSafetyFilter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/btnSave" />
</RelativeLayout>